@@ -1,0 +1,6 @@
+<pdf type="nsviewType" filename="printLogo.jpg" headline="LDAP Account Manager" foldingmarks="no">
+	<section name="_nsview_ou">
+		<entry name="nsview_nsViewFilter" />
+		<entry name="nsview_description" />
+	</section>
+</pdf>
